k8s/web/01-app.yml
apiVersion: v1
kind: Service
metadata:
  name: lineblocs-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lineblocs-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lineblocs-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: lineblocs-app

  template:
    metadata:
      labels:
        app: lineblocs-app
    spec:
      containers:
      - name: lineblocs-app
        image: lineblocs/user-app:master
        ports:
        - containerPort: 80
