k8s/web/02-com.yml
apiVersion: v1
kind: Service
metadata:
  name: lineblocs-com
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: lineblocs-com

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lineblocs-com

spec:
  replicas: 1
  selector:
    matchLabels:
      app: lineblocs-com

  template:
    metadata:
      labels:
        app: lineblocs-com
    spec:
      containers:
      - name: app
        image: 754569496111.dkr.ecr.ca-central-1.amazonaws.com/lineblocs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: X-Health
              value: health
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          requests:
            cpu: "64m"
            memory: "32Mi"
          limits:
            cpu: "4096m"
            memory: "16384Mi"
      imagePullSecrets:
      - name: web-regcred
