k8s/web/04-editor.yml
apiVersion: v1
kind: Service
metadata:
  name: lineblocs-editor
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lineblocs-editor

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lineblocs-editor

spec:
  replicas: 1
  selector:
    matchLabels:
      app: lineblocs-editor

  template:
    metadata:
      labels:
        app: lineblocs-editor
    spec:
      containers:
      - name: lineblocs-editor
        image: lineblocs/flow-designer:master
        ports:
        - containerPort: 80
