k8s/web/05-internals.yml
apiVersion: v1
kind: Service
metadata:
  name: lineblocs-internals
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 9999
    targetPort: 9999
    name: tcp
  selector:
    app: lineblocs-internals

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lineblocs-internals

spec:
  replicas: 3
  selector:
    matchLabels:
      app: lineblocs-internals

  template:
    metadata:
      labels:
        app: lineblocs-internals
    spec:
      containers:
      - env:
        - name: AWS_ACCESS_KEY_ID
          value: AKIAJHVI2B5KLCRD3BIQ
        - name: AWS_SECRET_ACCESS_KEY
          value: 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
        - name: MAILGUN_DOMAIN
          value: email.lineblocs.com
        - name: MAILGUN_API_KEY
          value: XXX
        - name: STRIPE_KEY
          value: sk_live_XyRu0OIhRnlKjf3BvyHecpqy
        - name: DB_HOST
          value: mysql
        - name: DB_USER
          value: root
        - name: DB_PASS
          value: "4ChTXGuEUtrj6b4H"
        - name: DB_NAME
          value: lineblocs
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
            httpHeaders:
            - name: X-Health
              value: health
          initialDelaySeconds: 3
          periodSeconds: 3
        name: lineblocs-internals
        image: 754569496111.dkr.ecr.ca-central-1.amazonaws.com/lineblocs-internals:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
          - containerPort: 9999
        resources:
          requests:
            cpu: "10m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
      imagePullSecrets:
      - name: lineblocs-regcred
