k8s/web/06-internals.yml
apiVersion: v1
kind: Service
metadata:
  name: lineblocs-internals
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 9999
    targetPort: 9999
    name: tcp
  selector:
    app: lineblocs-internals

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lineblocs-internals

spec:
  replicas: 3
  selector:
    matchLabels:
      app: lineblocs-internals

  template:
    metadata:
      labels:
        app: lineblocs-internals
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: mysql
        - name: DB_USER
          value: root
        - name: DB_PASS
          value: "4ChTXGuEUtrj6b4H"
        - name: DB_NAME
          value: lineblocs
        - name: ETCD_ENDPOINT
          value: http://etcd:2379
        - name: ETCD_USERNAME
          value: root
        - name: ETCD_PASSWORD
          value: 
        - name: USE_LIMIT_MIDDLEWARE
          value: off
        - name: USE_TLS
          value: off
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
            httpHeaders:
            - name: X-Health
              value: health
          initialDelaySeconds: 3
          periodSeconds: 3
        name: lineblocs-internals
        image: lineblocs/internals-api:master
        imagePullPolicy: Always
        ports:
          - containerPort: 80
          - containerPort: 9999
        resources:
          requests:
            cpu: "10m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
