k8s/web/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    default-ssl-certificate: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    #service.beta.kubernetes.io/do-loadbalancer-hostname: "lineblocs.com"
    ingress.kubernetes.io/proxy-body-size: "128m"
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "128m"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  tls:
  - hosts:
    - lineblocs.com
    - app.lineblocs.com
    - editor.lineblocs.com
    - phpmyadmin.lineblocs.com
    - internals.lineblocs.com
    - prv.lineblocs.com
    - emailer.lineblocs.com
    - tsc.lineblocs.com
    - s3fs.lineblocs.com
    - matomo.lbackups.com
    - infinitet3ch.com
    - infinitete.ch
    - saasexpress.ca
    secretName: hello-kubernetes-tls
  rules:
  - host: lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-com
          servicePort: 80
  - host: app.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-app
          servicePort: 80
  - host: editor.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-editor
          servicePort: 80
  - host: phpmyadmin.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: phpmyadmin-service
          servicePort: 80
  - host: internals.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-internals
          servicePort: 80
  - host: prv.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-prv
          servicePort: 80
  - host: emailer.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-emailer
          servicePort: 80
  - host: tsc.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-tsc-compiler
          servicePort: 80
  - host: s3fs.lineblocs.com
    http:
      paths:
      - backend:
          serviceName: lineblocs-s3fs
          servicePort: 80
  - host: matomo.lbackups.com
    http:
      paths:
      - backend:
          serviceName: matomo
          servicePort: 80
  - host: infinitet3ch.com
    http:
      paths:
      - backend:
          serviceName: infinitetech-v5
          servicePort: 80
  - host: infinitete.ch
    http:
      paths:
      - backend:
          serviceName: infinitetech-v5
          servicePort: 80
  - host: saasexpress.ca
    http:
      paths:
      - backend:
          serviceName: saasexp
          servicePort: 80
